--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:auth": "cross-env TEST_MODE=auth jest --config ./test/jest-e2e.json",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "docker:scan:api": "docker scan nodejs2022q2-service_api",
+    "docker:scan:postgres": "docker scan nodejs2022q2-service_postgres"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.3",
